set overflow-x to hidden on body element to try and fix horizontal scroller

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -12,7 +12,7 @@ body {
     font-family: var(--font-family-body);
     background-color: var(--color-bg);
     color: var(--color-fg);
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 h1 {
@@ -114,10 +114,6 @@ ul {
 }
 
 @media only screen and (min-width: 320px) {
-
-    body{
-        overflow: hidden;
-    }
 
     h1 {
         padding: 4px;
